[gd_scene load_steps=4 format=3 uid="uid://dvdm6hw1gfq2l"]

[ext_resource type="Texture2D" uid="uid://wokl4olhv1cc" path="res://textures/menu_background.png" id="1_l54u2"]
[ext_resource type="Script" path="res://scripts/scene_management.gd" id="1_xgg3q"]

[sub_resource type="LabelSettings" id="LabelSettings_onext"]
font_size = 64
font_color = Color(0.515793, 0.672529, 1, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xgg3q")
game_scene_path = "res://node_2d.tscn"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -317.0
offset_top = -172.0
offset_right = 317.0
offset_bottom = 172.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_l54u2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "PONG"
label_settings = SubResource("LabelSettings_onext")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="start_game_button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Start Game"

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="quit_game_button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/start_game_button" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/quit_game_button" to="." method="_quit_game"]
